@@ -1,18 +1,0 @@
-package uk.co.anthonycampbell.grails.plugins.picasa
-
-/**
- * Picasa plug-in User domain class.
- *
- * This class is used to persist the main properties of a user.
- *
- * @author Anthony Campbell (anthonycampbell.co.uk)
- */
-class User extends Person {
-
-    // Declare person properties
-
-    // Declare constraints
-    static constraints = {
-        
-    }
-}
