@@ -1,17 +1,0 @@
-package uk.co.anthonycampbell.grails.plugins.picasa
-
-import grails.test.*
-
-class PicasaFilterFiltersTests extends GrailsUnitTestCase {
-    protected void setUp() {
-        super.setUp()
-    }
-
-    protected void tearDown() {
-        super.tearDown()
-    }
-
-    void testSomething() {
-
-    }
-}
