@@ -2,6 +2,8 @@ VERSION: 0.5.0
 
 Known issues:
 - Poor code coverage of the PicasaService.
+- Quick controller / views / domain review.
+- Wiki updates.
 
 Release notes 0.5.0 (TBA)
 - Grails update to 1.3.2.
